Hide usage when empty, fix spacing

--- a/assets/css/list.css
+++ b/assets/css/list.css
@@ -1,6 +1,3 @@
-ul {
-	margin-bottom: 2em;
-}
 li {
 	margin: 0.5em 0;
 }
